--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "driver-install",
+  "name": "docker-composer",
   "scripts": {
+    "patch-release": "npm version patch && npm publish && git push --follow-tags",
+    "minor-release": "npm version minor && npm publish && git push --follow-tags",
+    "major-release": "npm version major && npm publish && git push --follow-tags",
     "unlink": "yarn unlink @csnext/cs-client && yarn unlink @csnext/cs-core && yarn unlink @csnext/cs-gridstack",
     "cs": "yarn link @csnext/cs-client && yarn link @csnext/cs-core && yarn link @csnext/cs-gridstack",
     "dev": "cross-env NODE_ENV=development nodemon --watch webpack.config.js --exec \"webpack-dev-server\"",
     "build": "cross-env NODE_ENV=production webpack --progress --watch",
-    "start": "concurrently \"yarn cs\" \"yarn dev\" \"cd ../../csnext && yarn dev\"",
-    "all": "concurrently \"yarn cs\" \"yarn dev\" \"cd ../../csnext && yarn dev\""
+    "start": "concurrently \"yarn cs\" \"yarn dev\" \"cd ../../csnext/csnext && yarn dev\"",
+    "all": "concurrently \"yarn cs\" \"yarn dev\" \"cd ../../csnext/csnext && yarn dev\""
   },
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "index.js",
-  "repository": "https://ci.tno.nl/gitlab/arnoud.dejong-tno/vaaflex-gui.git",
-  "author": "damylen <damylen@gmail.com>",
+  "repository": "https://github.com/DRIVER-EU/docker-composer.git",
+  "author": "erik.vullings <erik.vullings@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@csnext/cs-client": "^0.0.6",
