--- a/content.yml
+++ b/content.yml
@@ -6,7 +6,11 @@ content:
     items:
       kafka:
         title: DRIVER+ test-bed core
-        description: The test-bed allows you to trial and test different solutions in the crisis-management domain.
+        description: >
+          The test-bed allows you to trial and test different solutions in the
+          crisis-management domain. It consists of a complete setup of Apache
+          Kafka, and some additional tooling, such as the REST interface,
+          schema registry and UI, and topics UI.
         logo: https://avatars2.githubusercontent.com/u/16935616?s=200&v=4
         website: http://driver-project.eu
         depends_on:
@@ -16,29 +20,14 @@ content:
           - schema_registry
           - kafka_schema_registry_ui
           - kafka_topics_ui
+          - kafka_rest
         parameters:
           ZOOKEEPER_CLIENT_PORT: 3500
           KAFKA_BROKER_PORT: 3501
           SCHEMA_REGISTRY_PORT: 3502
-      rest:
-        title: REST interface
-        description: >
-          The Kafka REST Proxy provides a RESTful interface to a Kafka cluster. It makes it easy to produce and
-          consume messages, view the state of the cluster, and perform administrative actions without using the
-          native Kafka protocol or clients.
-
-          Examples of use cases include reporting data to Kafka from any frontend app built in any language,
-          ingesting messages into a stream processing framework that doesn't yet support Kafka, and scripting
-          administrative actions.
-
-        logo: https://www.confluent.io/wp-content/themes/confluent/assets/images/confluent-logo-300.png
-        website: https://github.com/confluentinc/kafka-rest
-        depends_on:
-          - kafka
-        services:
-          - kafka_rest
-        parameters:
-          KAFKA_REST_PORT: 3501
+          SCHEMA_REGISTRY_UI_PORT: 8000
+          KAFKA_TOPICS_PORT: 3600
+          KAFKA_REST_PORT: 8082
       connect:
         title: Kafka Connect
         description: >
@@ -53,9 +42,8 @@ content:
           - connect
           - kafka_connect_ui
         parameters:
-          ZOOKEEPER_CLIENT_PORT: 3500
-          KAFKA_BROKER_PORT: 3501
-          SCHEMA_REGISTRY_PORT: 3502
+          KAFKA_CONNECT_PORT: 3504
+          KAFKA_CONNECT_UI_PORT: 3602
   support:
     items:
       scenario_manager:
@@ -88,8 +76,8 @@ content:
         depends_on:
           - kafka
         parameters:
-          OOS_PORT: 3701
-          OOS_MANAGER_PORT: 3701
+          OOS_PORT: 3710
+          OOS_MANAGER_PORT: 3711
       aar:
         title: After Action Review tool
         description: >
@@ -99,7 +87,7 @@ content:
         depends_on:
           - kafka
         parameters:
-          AAR_PORT: 3701
+          AAR_PORT: 3720
       admin:
         title: Administrator Management tool
         description: >
@@ -110,7 +98,7 @@ content:
         depends_on:
           - kafka
         parameters:
-          ADMIN_MANAGER_PORT: 3701
+          ADMIN_MANAGER_PORT: 3730
       mit:
         title: Message injection and debugging tool
         description: >
@@ -121,7 +109,7 @@ content:
         depends_on:
           - kafka
         parameters:
-          SCENARIO_MANAGER_PORT: 3701
+          SCENARIO_MANAGER_PORT: 3740
   simulations:
     title: Simulations
     items:
@@ -137,7 +125,7 @@ content:
         services:
           - kafka
         parameters:
-          SUMO_PORT: 3704
+          SUMO_PORT: 3800
       flood:
         title: Flooding simulator
         description: >
@@ -149,7 +137,7 @@ content:
         services:
           - kafka
         parameters:
-          SUMO_PORT: 3704
+          SUMO_PORT: 3810
       firesim:
         title: A fake fire simulator
         description: Point me to a location and I wil lite it up, free of charge
@@ -159,7 +147,7 @@ content:
         services:
           - kafka
         parameters:
-          FIRESIM_PORT: 3703
+          FIRESIM_PORT: 3820
   utils:
     title: Utilities
     description: These can be practical when starting to integrate existing applications to the test-bed
@@ -174,7 +162,7 @@ content:
         services:
           - mbtiles
         parameters:
-          MBTILES_PORT: 3701
+          MBTILES_PORT: 3900
       wms:
         title: WMS-lite service
         description: WMS is a well known GIS standard to display overlays on maps. This WMS lite service allows you to view GeoJSON messages as WMS.
@@ -184,7 +172,7 @@ content:
         services:
           - kafka
         parameters:
-          WMS_LITE_PORT: 3702
+          WMS_LITE_PORT: 3901
   solutions:
     title: Solutions
     items:
@@ -202,7 +190,7 @@ content:
         services:
           - cscop
         parameters:
-          CSCOP_PORT: 8003
+          CSCOP_PORT: 8000
       gmv:
         title: GMV COP tool [COMMERCIAL]
         description: >
@@ -217,7 +205,7 @@ content:
         services:
           - cscop
         parameters:
-          CSCOP_PORT: 8003
+          GMVCOP_PORT: 8010
   data:
     title: Data sets
     items:
@@ -229,12 +217,16 @@ content:
           care institutions, etc.
 
           Many of our tools can use this to provide extra background information to the trial.
+
+
+
+
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper
     hostname: zookeeper
     ports:
-      - "3500:$ZOOKEEPER_CLIENT_PORT"
+      - "$ZOOKEEPER_CLIENT_PORT:3500"
     environment:
       ZOOKEEPER_CLIENT_PORT: $ZOOKEEPER_CLIENT_PORT
       ZOOKEEPER_TICK_TIME: 2000
@@ -245,12 +237,12 @@ services:
     depends_on:
       - zookeeper
     ports:
-      - "3501:3501"
+      - "$KAFKA_BROKER_PORT:3502"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:$ZOOKEEPER_CLIENT_PORT'
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker:3501'
-      KAFKA_LISTENERS: 'PLAINTEXT://0.0.0.0:3501'
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker:$KAFKA_BROKER_PORT'
+      KAFKA_LISTENERS: 'PLAINTEXT://0.0.0.0:$KAFKA_BROKER_PORT'
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_DEFAULT_REPLICATION_FACTOR: 1
       KAFKA_MESSAGE_MAX_BYTES: 100000000
@@ -263,10 +255,10 @@ services:
       - zookeeper
       - broker
     ports:
-      - "3502:3502"
+      - "$SCHEMA_REGISTRY_PORT:3502"
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema_registry
-      SCHEMA_REGISTRY_LISTENERS: 'http://0.0.0.0:3502'
+      SCHEMA_REGISTRY_LISTENERS: 'http://0.0.0.0:$SCHEMA_REGISTRY_PORT'
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:$ZOOKEEPER_CLIENT_PORT'
 
   kafka_rest:
@@ -277,13 +269,13 @@ services:
       - schema_registry
       - broker
     ports:
-      - "8082:8082"
+      - "$KAFKA_REST_PORT:8082"
     environment:
       KAFKA_REST_HOST_NAME: kafka_rest
-      KAFKA_REST_BOOTSTRAP_SERVERS: 'PLAINTEXT://broker:3501'
+      KAFKA_REST_BOOTSTRAP_SERVERS: 'PLAINTEXT://broker:$KAFKA_BROKER_PORT'
       KAFKA_REST_ZOOKEEPER_CONNECT: 'zookeeper:$ZOOKEEPER_CLIENT_PORT'
-      KAFKA_REST_LISTENERS: 'http://0.0.0.0:8082'
-      KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://schema_registry:3502'
+      KAFKA_REST_LISTENERS: 'http://0.0.0.0:$KAFKA_REST_PORT'
+      KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://schema_registry:$SCHEMA_REGISTRY_PORT'
       KAFKA_CONSUMER_REQUEST_TIMEOUT_MS: 30000
       KAFKA_REST_ACCESS_CONTROL_ALLOW_METHODS: 'GET,POST,PUT,DELETE,OPTIONS'
       KAFKA_REST_ACCESS_CONTROL_ALLOW_ORIGIN: '*'
@@ -294,9 +286,9 @@ services:
     depends_on:
       - kafka_rest
     ports:
-      - "3600:8000"
+      - "$KAFKA_TOPICS_UI:8000"
     environment:
-      KAFKA_REST_PROXY_URL: 'http://kafka_rest:8082'
+      KAFKA_REST_PROXY_URL: 'http://kafka_rest:$KAFKA_REST_PORT'
       PROXY: 'true'
 
   kafka_schema_registry_ui:
@@ -305,20 +297,9 @@ services:
     depends_on:
       - schema_registry
     ports:
-      - "3601:8000"
+      - "$SCHEMA_REGISTRY_UI_PORT:8000"
     environment:
-      SCHEMAREGISTRY_URL: 'http://schema_registry:3502'
-      PROXY: 'true'
-
-  kafka_connect_ui:
-    image: landoop/kafka-connect-ui
-    hostname: kafka_connect_ui
-    depends_on:
-      - connect
-    ports:
-      - "3602:8000"
-    environment:
-      CONNECT_URL: 'http://connect:3504'
+      SCHEMAREGISTRY_URL: 'http://schema_registry:$SCHEMA_REGISTRY_PORT'
       PROXY: 'true'
 
   connect:
@@ -329,16 +310,16 @@ services:
       - broker
       - schema_registry
     ports:
-      - "3504:3504"
+      - "$KAFKA_CONNECT_PORT:3504"
     environment:
-      CONNECT_BOOTSTRAP_SERVERS: 'broker:3501'
+      CONNECT_BOOTSTRAP_SERVERS: 'broker:$KAFKA_BROKER_PORT'
       CONNECT_ZOOKEEPER_CONNECT: 'zookeeper:$ZOOKEEPER_CLIENT_PORT'
       CONNECT_KEY_CONVERTER: io.confluent.connect.avro.AvroConverter
-      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema_registry:3502'
+      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema_registry:$SCHEMA_REGISTRY_PORT'
       CONNECT_VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
-      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema_registry:3502'
+      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema_registry:$SCHEMA_REGISTRY_PORT'
       CONNECT_REST_ADVERTISED_HOST_NAME: connect
-      CONNECT_REST_PORT: 3504
+      CONNECT_REST_PORT: $KAFKA_CONNECT_PORT
       CONNECT_GROUP_ID: compose-connect-group
       CONNECT_CONFIG_STORAGE_TOPIC: docker-connect-configs
       CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: 1
@@ -349,5 +330,30 @@ services:
       CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
       CONNECT_INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       CONNECT_INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
+
+  kafka_connect_ui:
+    image: landoop/kafka-connect-ui
+    hostname: kafka_connect_ui
+    depends_on:
+      - connect
+    ports:
+      - "$KAFKA_CONNECT_UI_PORT:8000"
+    environment:
+      CONNECT_URL: 'http://connect:$KAFKA_CONNECT_PORT'
+      PROXY: 'true'
+
+  cscop:
+    build: https://github.com/DRIVER-EU/csCOP.git#test-bed:website
+    hostname: cscop
+    depends_on:
+      - schema_registry
+      - zookeeper
+      - broker
+    ports:
+      - "$CSCOP_PORT:8003"
+    volumes:
+      - ./config/cscop/:/src/config/
+    environment:
+      CSCOP_PORT: $CSCOP_PORT
 
 
