--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "unlink": "yarn unlink @csnext/cs-client && yarn unlink @csnext/cs-core",
     "cs": "yarn link @csnext/cs-client && yarn link @csnext/cs-core",
     "dev": "cross-env NODE_ENV=development nodemon --watch webpack.config.js --exec \"webpack-dev-server\"",
+    "start": "webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack --progress --watch",
-    "start": "concurrently \"yarn cs\" \"yarn dev\" \"cd ../../csnext && yarn dev\""
+    "all": "concurrently \"yarn cs\" \"yarn dev\" \"cd ../../csnext && yarn dev\""
   },
   "version": "0.0.1",
   "main": "index.js",
@@ -16,10 +17,10 @@
   "author": "erik.vullings <erik.vullings@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@csnext/cs-client": "^0.0.6",
-    "@types/node": "^8.0.53",
+    "@csnext/cs-client": "^0.0.8",
+    "@types/node": "^8.5.9",
     "axios": "^0.17.1",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
     "vue": "^2.5.13",
     "vue-class-component": "^6.1.2",
     "vue-property-decorator": "^6.0.0",
@@ -32,7 +33,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.17",
+    "clean-webpack-plugin": "^0.1.18",
     "concurrently": "^3.5.1",
     "copy-webpack-plugin": "^4.3.1",
     "cross-env": "^5.1.3",
@@ -40,15 +41,15 @@
     "dc": "^2.1.9",
     "file-loader": "^1.1.6",
     "raw-loader": "^0.5.1",
-    "style-loader": "^0.19.1",
-    "ts-loader": "^3.2.0",
-    "typescript": "^2.6.2",
+    "style-loader": "^0.20.1",
+    "ts-loader": "^3.4.0",
+    "typescript": "^2.7.1",
     "uglify-es": "git://github.com/mishoo/UglifyJS2#harmony",
     "uglifyjs-webpack-plugin": "^1.1.8",
-    "vue-loader": "^13.7.0",
+    "vue-loader": "^14.1.1",
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.9.2",
-    "webpack-dev-server": "^2.11.0"
+    "webpack-bundle-analyzer": "^2.10.0",
+    "webpack-dev-server": "^2.11.1"
   }
 }
