--- a/content.yml
+++ b/content.yml
@@ -22,8 +22,9 @@ content:
           - kafka_topics_ui
           - kafka_rest
         parameters:
-          ZOOKEEPER_CLIENT_PORT: 3500
           KAFKA_BROKER_PORT: 3501
+          KAFKA_HOST_NAME: 'localhost'
+          ZOOKEEPER_CLIENT_PORT: 3500
           SCHEMA_REGISTRY_PORT: 3502
           SCHEMA_REGISTRY_UI_PORT: 8000
           KAFKA_TOPICS_PORT: 3600
@@ -223,9 +224,6 @@ content:
 
           Many of our tools can use this to provide extra background information to the trial.
 
-
-
-
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper
@@ -246,8 +244,9 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:$ZOOKEEPER_CLIENT_PORT'
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker:$KAFKA_BROKER_PORT'
-      KAFKA_LISTENERS: 'PLAINTEXT://0.0.0.0:$KAFKA_BROKER_PORT'
+      KAFKA_ADVERTISED_LISTENERS: 'EXTERNAL://$KAFKA_HOST_NAME:$KAFKA_BROKER_PORT,PLAINTEXT://broker:9092'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT'
+      KAFKA_LISTENERS: 'EXTERNAL://0.0.0.0:$KAFKA_BROKER_PORT,PLAINTEXT://0.0.0.0:9092'
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_DEFAULT_REPLICATION_FACTOR: 1
       KAFKA_MESSAGE_MAX_BYTES: 100000000
@@ -277,7 +276,7 @@ services:
       - "$KAFKA_REST_PORT:8082"
     environment:
       KAFKA_REST_HOST_NAME: kafka_rest
-      KAFKA_REST_BOOTSTRAP_SERVERS: 'PLAINTEXT://broker:$KAFKA_BROKER_PORT'
+      KAFKA_REST_BOOTSTRAP_SERVERS: 'PLAINTEXT://broker:9092'
       KAFKA_REST_ZOOKEEPER_CONNECT: 'zookeeper:$ZOOKEEPER_CLIENT_PORT'
       KAFKA_REST_LISTENERS: 'http://0.0.0.0:$KAFKA_REST_PORT'
       KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://schema_registry:$SCHEMA_REGISTRY_PORT'
@@ -293,7 +292,7 @@ services:
     ports:
       - "$KAFKA_TOPICS_UI:8000"
     environment:
-      KAFKA_REST_PROXY_URL: 'http://kafka_rest:$KAFKA_REST_PORT'
+      KAFKA_REST_PROXY_URL: 'http://kafka_rest:8082'
       PROXY: 'true'
 
   kafka_schema_registry_ui:
@@ -317,7 +316,7 @@ services:
     ports:
       - "$KAFKA_CONNECT_PORT:3504"
     environment:
-      CONNECT_BOOTSTRAP_SERVERS: 'broker:$KAFKA_BROKER_PORT'
+      CONNECT_BOOTSTRAP_SERVERS: 'broker:9092'
       CONNECT_ZOOKEEPER_CONNECT: 'zookeeper:$ZOOKEEPER_CLIENT_PORT'
       CONNECT_KEY_CONVERTER: io.confluent.connect.avro.AvroConverter
       CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema_registry:$SCHEMA_REGISTRY_PORT'
