--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@types/node": "^8.5.9",
     "axios": "^0.17.1",
     "lodash": "^4.17.5",
+    "uglify-js": "mishoo/UglifyJS2#bf1d471",
     "vue": "^2.5.13",
     "vue-class-component": "^6.1.2",
     "vue-property-decorator": "^6.0.0",
-    "vuetify": "^v1.0.0-beta.4",
+    "vuetify": "^v1.0.0-beta.6",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
@@ -37,16 +38,16 @@
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
     "concurrently": "^3.5.1",
-    "copy-webpack-plugin": "^4.3.1",
+    "copy-webpack-plugin": "^4.4.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.9",
     "dc": "^2.1.9",
     "file-loader": "^1.1.6",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.20.1",
-    "ts-loader": "^3.4.0",
+    "ts-loader": "^3.5.0",
     "typescript": "^2.7.1",
-    "uglify-es": "git://github.com/mishoo/UglifyJS2#harmony",
+    "uglify-es": "mishoo/UglifyJS2#bf1d471",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "vue-loader": "^14.1.1",
     "vue-template-compiler": "^2.5.13",
