--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "style-loader": "^0.20.1",
     "ts-loader": "^3.5.0",
     "typescript": "^2.7.1",
-    "uglify-es": "mishoo/UglifyJS2#bf1d471",
+    "uglify-es": "mishoo/UglifyJS2#harmony",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "vue-loader": "^14.1.1",
     "vue-template-compiler": "^2.5.13",
