--- a/content.yml
+++ b/content.yml
@@ -22,12 +22,13 @@ content:
           - kafka_topics_ui
           - kafka_rest
         parameters:
-          KAFKA_BROKER_PORT: 3501
-          KAFKA_HOST_NAME: 'localhost'
           ZOOKEEPER_CLIENT_PORT: 3500
-          SCHEMA_REGISTRY_PORT: 3502
-          SCHEMA_REGISTRY_UI_PORT: 8000
+          KAFKA_HOST_NAME: 'localhost'
+          KAFKA_BROKER_PORT: 3501
           KAFKA_TOPICS_PORT: 3600
+          KAFKA_TOPICS_UI: 3601
+          SCHEMA_REGISTRY_PORT: 3502
+          SCHEMA_REGISTRY_UI_PORT: 3602
           KAFKA_REST_PORT: 8082
       connect:
         title: Kafka Connect
