--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "docker-composer",
   "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "dev": "vue-cli-service serve -p 2345",
     "patch-release": "npm version patch && npm publish && git push --follow-tags",
     "minor-release": "npm version minor && npm publish && git push --follow-tags",
     "major-release": "npm version major && npm publish && git push --follow-tags",
     "unlink": "yarn unlink @csnext/cs-client && yarn unlink @csnext/cs-core",
     "cs": "yarn link @csnext/cs-client && yarn link @csnext/cs-core",
-    "dev": "cross-env NODE_ENV=development nodemon --watch webpack.config.js --exec \"webpack-dev-server\"",
-    "start": "webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack --progress --watch",
+    "start": "webpack-dev-server --open",
     "all": "concurrently \"yarn cs\" \"yarn dev\" \"cd ../../csnext && yarn dev\""
   },
   "version": "0.0.3",
@@ -17,42 +18,37 @@
   "author": "erik.vullings <erik.vullings@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@csnext/cs-client": "^0.0.8",
-    "@csnext/cs-core": "^0.0.8",
-    "@types/geojson": "^7946.0.1",
-    "@types/node": "^8.5.9",
-    "axios": "^0.17.1",
-    "lodash": "^4.17.5",
-    "uglify-js": "mishoo/UglifyJS2#bf1d471",
-    "vue": "^2.5.13",
-    "vue-class-component": "^6.1.2",
-    "vue-property-decorator": "^6.0.0",
-    "vuetify": "^v1.0.0-beta.6",
+    "@csnext/cs-client": "0.0.63",
+    "@csnext/cs-core": "0.0.63",
+    "axios": "^0.18.0",
+    "portable-fetch": "^3.0.0",
+    "raw-loader": "^0.5.1",
+    "vue": "^2.5.17",
+    "vue-class-component": "^6.2.0",
+    "vue-json-pretty": "^1.4.1",
+    "vue-markdown": "^2.2.4",
+    "vue-property-decorator": "^7.0.0",
+    "vue-router": "^3.0.1",
+    "vuetify": "^1.2.3",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/helper-module-imports": "^7.0.0",
+    "@babel/plugin-syntax-jsx": "^7.0.0",
+    "@csnext/vue-cli-plugin-cs": "^0.0.63",
+    "@types/geojson": "^7946.0.4",
+    "@types/node": "^10.10.1",
     "@types/yamljs": "^0.2.30",
-    "awesome-typescript-loader": "^3.4.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.18",
-    "concurrently": "^3.5.1",
-    "copy-webpack-plugin": "^4.4.1",
-    "cross-env": "^5.1.3",
-    "css-loader": "^0.28.9",
-    "dc": "^2.1.9",
-    "file-loader": "^1.1.6",
-    "raw-loader": "^0.5.1",
-    "style-loader": "^0.20.1",
-    "ts-loader": "^3.5.0",
-    "typescript": "^2.7.1",
-    "uglify-es": "mishoo/UglifyJS2#harmony",
-    "uglifyjs-webpack-plugin": "^1.1.8",
-    "vue-loader": "^14.1.1",
-    "vue-template-compiler": "^2.5.13",
-    "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.10.0",
-    "webpack-dev-server": "^2.11.1"
+    "@vue/babel-preset-app": "^3.0.1",
+    "@vue/cli-plugin-babel": "^3.0.3",
+    "@vue/cli-plugin-typescript": "^3.0.3",
+    "@vue/cli-service": "^3.0.3",
+    "babel-loader": "^8.0.2",
+    "cache-loader": "^1.2.2",
+    "css-loader": "^1.0.0",
+    "ts-loader": "^5.1.1",
+    "typescript": "^3.0.3",
+    "vue-template-compiler": "^2.5.17"
   }
 }
