--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "dev": "vue-cli-service serve -p 2345",
     "patch-release": "npm version patch && npm publish && git push --follow-tags",
     "minor-release": "npm version minor && npm publish && git push --follow-tags",
     "major-release": "npm version major && npm publish && git push --follow-tags",
-    "unlink": "yarn unlink @csnext/cs-client && yarn unlink @csnext/cs-core",
-    "cs": "yarn link @csnext/cs-client && yarn link @csnext/cs-core",
     "start": "webpack-dev-server --open",
-    "all": "concurrently \"yarn cs\" \"yarn dev\" \"cd ../../csnext && yarn dev\""
+    "dev": "yarn cs-dev && yarn serve",
+    "cs-dev": "yarn link @csnext/cs-client && yarn link @csnext/cs-core && yarn link @csnext/vue-cli-plugin-cs",
+    "cs-unlink": "yarn unlink @csnext/cs-client && yarn unlink @csnext/cs-core && yarn unlink @csnext/vue-cli-plugin-cs"
   },
   "version": "0.0.3",
   "main": "index.js",
@@ -18,26 +17,24 @@
   "author": "erik.vullings <erik.vullings@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@csnext/cs-client": "0.0.63",
-    "@csnext/cs-core": "0.0.63",
+    "@csnext/cs-client": "0.0.64",
+    "@csnext/cs-core": "0.0.64",
     "axios": "^0.18.0",
     "portable-fetch": "^3.0.0",
-    "raw-loader": "^0.5.1",
     "vue": "^2.5.17",
     "vue-class-component": "^6.2.0",
     "vue-json-pretty": "^1.4.1",
     "vue-markdown": "^2.2.4",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.2.3",
+    "vuetify": "^1.2.4",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
     "@babel/helper-module-imports": "^7.0.0",
     "@babel/plugin-syntax-jsx": "^7.0.0",
-    "@csnext/vue-cli-plugin-cs": "^0.0.63",
-    "@types/geojson": "^7946.0.4",
+    "@csnext/vue-cli-plugin-cs": "^0.0.64",
     "@types/node": "^10.10.1",
     "@types/yamljs": "^0.2.30",
     "@vue/babel-preset-app": "^3.0.1",
@@ -47,6 +44,9 @@
     "babel-loader": "^8.0.2",
     "cache-loader": "^1.2.2",
     "css-loader": "^1.0.0",
+    "postcss-loader": "^3.0.0",
+    "raw-loader": "^0.5.1",
+    "thread-loader": "^1.2.0",
     "ts-loader": "^5.1.1",
     "typescript": "^3.0.3",
     "vue-template-compiler": "^2.5.17"
